--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "react-redux": "^5.0.5",
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.7.1",
-    "redux-actions": "^2.0.3",
-    "typestyle": "^1.3.4"
+    "redux-actions": "^2.0.3"
   },
   "devDependencies": {
     "react-scripts": "1.0.7"
