--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "enzyme": "^2.9.1",
     "enzyme-to-json": "^1.5.1",
+    "keycode": "^2.1.9",
     "material-ui": "next",
     "material-ui-icons": "^1.0.0-alpha.19",
     "prop-types": "^15.5.10",
