--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "material-ui-icons": "^1.0.0-alpha.19",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
+    "react-color": "^2.13.0",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
     "react-tap-event-plugin": "^2.0.1",
