--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.16.2",
     "enzyme": "^2.9.1",
     "enzyme-to-json": "^1.5.1",
     "keycode": "^2.1.9",
-    "material-ui": "next",
+    "material-ui": "^1.0.0-beta.8",
     "material-ui-icons": "^1.0.0-alpha.19",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
